Matches list completed using a recycler view, contains restaurant name and address that the user has matched with.

--- a/app/src/main/res/layout/item_matches.xml
+++ b/app/src/main/res/layout/item_matches.xml
@@ -26,9 +26,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Match's ID"
+            android:text="Match's Address"
             android:layout_gravity="center"
-            android:id="@+id/Matchid">
+            android:id="@+id/MatchAddress">
         </TextView>
 
     </LinearLayout>
