--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:text="Change Username"
         android:textSize="24sp"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:text="Reset Password"
         android:onClick="resetPassword"
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:onClick="toChangeEmail"
         android:text="Change Email Address"
@@ -89,14 +89,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="75dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:onClick="toSetDistance"
         android:text="Change Distance"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/changeNotifications"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/changeEmail" />
 
@@ -113,7 +111,8 @@
         app:layout_constraintBottom_toTopOf="@+id/settingsHeader"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+
+<!--    <TextView
         android:id="@+id/changeNotifications"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -125,7 +124,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_sign_out"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/changeEmail" />-->
 
 
     <TextView
@@ -133,15 +132,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
         android:ems="10"
         android:text="Reset Matches"
         android:onClick="resetMatches"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button_sign_out"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/changeNotifications"
+        app:layout_constraintTop_toBottomOf="@+id/setDistance"
         app:layout_constraintVertical_bias="0.225" />
 
     <Button
