back button on map

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -80,6 +80,7 @@
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/back"
+        android:onClick="toSwipe"
         app:backgroundTint="#F44336"
         app:layout_constraintBottom_toBottomOf="@+id/mapView"
         app:layout_constraintEnd_toEndOf="parent"
