--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -143,6 +143,22 @@
         app:layout_constraintTop_toBottomOf="@+id/changePasswordText"
         app:layout_constraintVertical_bias="0.225" />
 
+    <TextView
+        android:id="@+id/contactUs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:text="Contact Us"
+        android:onClick="contactUs"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/resetMatches"
+        app:layout_constraintVertical_bias="0.225" />
+
     <Button
         android:id="@+id/button_sign_out"
         android:layout_width="333dp"
